Localize "toggle Navigation" aria label

--- a/locale/de.ini
+++ b/locale/de.ini
@@ -11,6 +11,7 @@ login=Anmelden
 logout=Abmelden
 signup=Registrieren
 settings=Einstellungen
+toggle_navigation=Navigation anzeigen
 
 [404]
 not_found=Seite nicht gefunden
