--- a/locale/en.ini
+++ b/locale/en.ini
@@ -11,6 +11,7 @@ login=Log In
 logout=Log Out
 signup=Sign Up
 settings=Settings
+toggle_navigation=Toggle Navigation
 
 [404]
 not_found=Page Not Found
