UI: Reimplement dark mode client-sided and componentize nav links

--- a/locale/de.ini
+++ b/locale/de.ini
@@ -5,7 +5,7 @@ language=Deutsch
 [Navigation]
 discover=Entdecken
 create=Neues Projekt anlegen
-my_projects=Meine Projekte
+my-projects=Meine Projekte
 account=Mein Profil
 login=Anmelden
 logout=Abmelden
